--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,1 +1,4 @@
-<h1>Home Page</h1>
+<h1>WELCOME TO HIPSTER//\\GRAM</h1>
+
+<%= link_to 'Sign Up', new_user_path %>
+<%= link_to 'Log In', login_path %>
