--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,9 @@
 <h1>Main Page</h1>
+
+<% if logged_in? %>
+  Logged in as: <%= current_user.first_name %> <%= current_user.last_name %> <%= link_to 'Log Out', logout_path, method: :delete %>
+<% else %>
+  <%= link_to 'Log In', login_path %>
+<% end %>
+
+
