--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -38,13 +38,18 @@
 			<%= f.password_field :password %>
 
 			<br>
-		
+
+			<%= f.label :password_confirmation %>
+			<%= f.password_field :password_confirmation %>
+
+			<br>
 
 			<%= f.submit "Submit" %>
 
-			
-
+		
 		</div>
+
+		<%= link_to "Go Back", root_path %>
 
 	<% end %>
 
