--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,18 @@
   <%= link_to 'Log In', login_path %>
 <% end %>
 
-<%= image_tag @user.image_url %>
+<br>
+<br>
+
+<% @users.each do |user| %>
+
+	<li>
+		<%= image_tag user.image_url %> <%= user.first_name %> <%= user.last_name %>
+    <br>
+    <%= link_to 'View Profile', user_path(user) %>
+
+	</li>
+
+<% end %>
 
 
