commiting before checking out to master

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,8 +16,15 @@
     <br>
     <%= link_to 'View Profile', user_path(user) %>
 
+    <%= image_tag user.posts.image_url %>
+
 	</li>
 
+
+
 <% end %>
+
+
+
 
 
