--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,21 +16,10 @@
     <br>
     	<%= link_to 'View Profile', user_path(user) %>
 	</li>
-		<%= image_tag user.posts.last.image_url.url %>
+		<%= image_tag user.posts.last.image_url %>
 		<br>
 		<%= user.posts.last.description %>
 		<br>
-		
 
 <% end %>
-
-
-
-
-
-
-
-
-
-
 
