--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,20 +6,24 @@
   <%= link_to 'Log In', login_path %>
 <% end %>
 
+<%= link_to 'Add New Post', new_post_path %>
+
 <br>
 <br>
 
 <% @users.each do |user| %>
 
 	<li>
-		<%= image_tag user.image_url.url(:thumb) %> <%= user.first_name %> <%= user.last_name %>
+		<%= image_tag user.image_url.url(:thumb) %> <%= user.first_name %> <%= user.last_name %> 
+    <br>
+    	<%= user.hipster_index %>
     <br>
     	<%= link_to 'View Profile', user_path(user) %>
 	</li>
 		<%= image_tag user.posts.last.image_url %>
-		<br>
+	<br>
 		<%= user.posts.last.description %>
-		<br>
+	<br>
 
 <% end %>
 
