--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,39 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#post-container {
+	.header {
+		text-align: center;
+		font-family: 'VT323', ;
+		font-size: 45px;
+		margin-bottom: 80px;
+	}
+
+	.new {
+		text-align: center;
+		border: 3px solid black;
+		border-radius: 10px;
+		padding: 60px;
+		padding-bottom: 80px;
+		margin: 100px;
+		margin-top: 20px;
+		margin-right: 150px;
+		margin-left: 150px;
+		background-image: url(http://www.clipartbest.com/cliparts/xcg/L7G/xcgL7GacA.png);
+		background-size: 850px;
+		background-position: center center;
+		background-repeat: no-repeat;
+		/*background-attachment: fixed;*/
+		background-color: white;
+		height: 30%;
+		color: white;
+	}
+
+	.new p {
+		font-family: 'VT323', ;
+		margin: 10px;
+		font-size: 25px;
+	}
+
+	.new input {
+		border-radius: 10px;
+		background-color: white;
+	}
+}
