--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,69 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#signup-container {
+
+	.signup h1{
+		text-align: center;
+		font-family: 'VT323', ;
+		font-size: 50px;
+		margin-bottom: 80px;
+	}
+
+	.signup {
+		text-align: left;
+		border: 3px solid black;
+		border-radius: 10px;
+		padding: 40px;
+		padding-bottom: 80px;
+		margin: 100px;
+		margin-top: 20px;
+		margin-right: 250px;
+		margin-left: 250px;
+		background-image: url(http://www.clipartbest.com/cliparts/RTG/y9g/RTGy9gyrc.png);
+		background-size: 320px;
+		background-position: right center;
+		background-repeat: no-repeat;
+		/*background-attachment: fixed;*/
+		background-color: black;
+		height: 30%;
+		color: white;
+	}
+
+	.signup label {
+		font-family: 'VT323', ;
+		margin: 15px;
+		font-size: 25px;
+	}
+
+	.signup input {
+		font-family: 'VT323', ;
+		margin: 15px;
+		border-radius: 5px;
+	}
+
+	.signup button {
+		padding: 10px;
+		margin: 0px;
+		font-family: 'VT323', ;
+		border-radius: 20px;
+		border: 3px solid black;
+		margin-top: 50px;
+		color: white;
+		background-color: white;
+	}
+
+	.signup button input {
+		background: none;
+		color: black;
+		font-size: 20px;
+		font-family: 'VT323', ;
+		border-radius: 10px;
+	}
+
+	.signup button a {
+		text-decoration: none;
+		color: black;
+		font-size: 20px;
+	}
+	
+}
+
+/* end signup - container*/
