--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,17 +1,16 @@
-<div id="new-post-controller">
+<div id="post-container">
 
-	<h1 class="h1">Add a Post Here!</h1>
+<div class="header">
+	<h1>Post something, or don't</h1>
+</div>
 
 	<%= form_for @post do |f| %>
 
 		<div class="new">
 
 
-			<p>Add an image bro:</p><% f.label :image_url %>
+			<p>Picture, please:</p><% f.label :image_url %>
 			<%= f.file_field :image_url %>
-			
-		<br>
-		<br>
 
 			<p>Tell us about it if you want:</p><% f.label :description %>
 			<%= f.text_field :description %>
@@ -29,4 +28,4 @@
 	<% end %>
 
 
-</div> <!-- end new-post-controller -->
+</div> <!-- end post container-->
