--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,39 @@
-<h1>WELCOME TO HIPSTER//\\GRAM</h1>
+<div id="home-container">
 
-<%= link_to 'Sign Up', new_user_path %>
-<%= link_to 'Log In', login_path %>
+<div class="header">
+	<h1>WELCOME TO HIPSTER//\\GRAM</h1>
+</div>
+	
+
+	<div class="homeNav">	
+		<div class="signup">
+			<%= link_to '<<<<< Sign Up >>>>>', new_user_path %>
+		</div>                                     
+		<div class="login">
+			<%= link_to '<<<<< Log In >>>>>', login_path %>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<div class="footer">
+		HIPSTER//\\GRAM - 2015
+	</div>
+
+</div> <!-- end home-container -->
