--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,60 +1,64 @@
 <div id="signup-container">
+<div class="signup">
+	<h1>Signup before it's cool</h1>
 
-<h1 class="h1">Sign up now to enter!</h1>
+	
+		<%= form_for @user do |f|  %>
 
-	<%= form_for @user do |f|  %>
+			<% if @user.errors.any? %>
+				<div>
+					<h4><%= pluralize(@user.errors.count, "error") %> prevented you from signing up for an account:</h4>
 
-		<% if @user.errors.any? %>
+					<ul>
+						<% @user.errors.full_messages.each do |msg| %>
+							<li class="list-group-item list-group-item-danger"><%= msg.downcase %> </li>
+						<% end %>
+					</ul>
+				</div>
+			<% end %>
+
+
+
 			<div>
-				<h4><%= pluralize(@user.errors.count, "error") %> prevented you from signing up for an account:</h4>
+				<%= f.label :first_name %>
+				<%= f.text_field :first_name %>
 
-				<ul>
-					<% @user.errors.full_messages.each do |msg| %>
-						<li class="list-group-item list-group-item-danger"><%= msg.downcase %> </li>
-					<% end %>
-				</ul>
+				<br>
+
+				<%= f.label :last_name %>
+				<%= f.text_field :last_name %>
+
+				<br>
+			
+				<%= f.label :email %>
+				<%= f.text_field :email %>
+
+				<br>
+			
+				<%= f.label :password %>
+				<%= f.password_field :password %>
+
+				<br>
+
+				<%= f.label :password_confirmation %>
+				<%= f.password_field :password_confirmation %>
+
+				<br>
+
+				<%= f.file_field :image_url %>
+
+				<br>
+				
+				<button>
+					<%= f.submit "Submit" %>
+				</button>
+				
+				<button>
+					<%= link_to "Go Back", root_path %>
+				</button>
 			</div>
+
 		<% end %>
-
-
-
-		<div class="login">
-			<%= f.label :first_name %>
-			<%= f.text_field :first_name %>
-
-			<br>
-
-			<%= f.label :last_name %>
-			<%= f.text_field :last_name %>
-
-			<br>
-		
-			<%= f.label :email %>
-			<%= f.text_field :email %>
-
-			<br>
-		
-			<%= f.label :password %>
-			<%= f.password_field :password %>
-
-			<br>
-
-			<%= f.label :password_confirmation %>
-			<%= f.password_field :password_confirmation %>
-
-			<br>
-
-			<%= f.file_field :image_url %>
-
-			<br>
-
-			<%= f.submit "Submit" %>
-
-		
-		</div>
-
-		<%= link_to "Go Back", root_path %>
-
-	<% end %>
+	</div>
 
 </div> <!-- end signup-container -->
