--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -67,3 +67,89 @@
 }
 
 /* end signup - container*/
+
+
+#index-container {
+	margin: 20px;
+	list-style-type: none;
+
+	.nav {
+		font-size: 18px;
+	}
+
+	.nav a{
+		text-decoration: none;
+	}
+
+	.header {
+		text-align: center;
+		font-family: 'VT323', ;
+		font-size: 40px;
+		margin-bottom: 80px;
+	}
+
+
+	.post-button {
+		text-align: center;
+		border: 2px solid black;
+		border-radius: 10px;
+		padding: 60px;
+		margin:10px;
+		color: white;
+		font-size: 30px;
+		/*margin-right: 1120px;
+		margin-left: 10px;*/
+		margin: 0 auto;
+		background-image: url(http://www.inretail.nl/websites/inretail/gfx/topmusmon1.jpg);
+		background-size: 280px;
+		background-position: right center;
+		background-repeat: repeat-x;
+		/*background-attachment: fixed;*/
+		background-color: 0,0,0,0.6;
+		width: 80%;
+		/*transform: scaleX(-1);*/
+	}
+
+	.post-button a {
+		text-decoration: none;
+		color: black;
+
+	}
+
+	.full-post {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		margin-top: 10px;
+	}
+
+	.post {
+		display: flex;
+		flex: 2;
+		align-items: center;
+		flex-direction: column;
+		border-bottom: 2px solid black;
+	}
+
+	.post-image {
+		border: 3px solid black;
+		border-radius: 20px;
+		overflow: hidden;
+	}
+
+	.post-image img {
+		width: 450px;
+		height: 450px;
+	}
+
+	.post-description {
+		font-size: 35px;
+		border: 2px solid black;
+		margin-top: 15px;
+		margin-bottom: 10px;
+		padding: 10px;
+		border-radius: 20px;
+	}
+
+
+}
