--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,36 +1,44 @@
-<div class="row">
-	<div class="col-lg-4">
+<div id="show-container">
+	<div class="header">
 		<h1><%= @user.first_name %> <%= @user.last_name %></h1>
 
 		<h3>Hipster Index: <%= @user.hipster_index %></h3>
 
 
-		<%= link_to 'Add New Post', new_post_path %> <%= link_to "Go Back", users_path %>
+		<%= link_to "Go Back", users_path %>
 	</div>
 
-	<div class="col-lg-8">
-		<h3>All of the posts are listed here...if you care</h3>
+	<h3>All of the posts are listed here...if you care</h3>
 
-		<% @user.posts.each do |post| %>
-			
-			<%= image_tag post.image_url %>
-			<br>
-			<br>
-			<%= post.description %>
-			<br>
-			<br>
-			<%= form_for Like.new do |f| %>
-				<%= hidden_field_tag(:post_id, post.id)  %> <!-- creating a hidden field in our form that will pass the posts id along when the form is submitted -->
+	<div class="full-post">
+		
+		<div class="posts">
+			<% @user.posts.each do |post| %>
+				<div class="post-image">
+					<%= image_tag post.image_url %>
+				</div>
 				
-				<%= f.submit "Mainstream", class: "btn btn-primary"%>
+				<div class="clear-float">
+					<div class="post-description">
+						<%= post.description %>
+					</div>
+					<br>
+					<div class="mainstream">
+						<%= form_for Like.new do |f| %>
+							<%= hidden_field_tag(:post_id, post.id)  %> <!-- creating a hidden field in our form that will pass the posts id along when the form is submitted -->
+							
+							<%= f.submit "Mainstream", class: "btn btn-primary"%>
+						<% end %>
+					</div>
+				</div>
+				<br>
+				<br>
 			<% end %>
-			<br>
-			<br>
-		<% end %>
+		</div>
 
 	</div> 
 
-</div> <!-- end row -->
+</div> 
 
 
 
