--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -36,4 +36,22 @@
 		border-radius: 10px;
 		background-color: white;
 	}
+
+	.new button {
+		border-radius: 10px;
+		font-size: 16px;
+		font-family: 'VT323', ;
+	}
+
+	.new button input {
+		border: none;
+		padding: 10px;
+	}
+
+	.new button a {
+		text-decoration: none;
+		background-color: white;
+		padding: 10px;
+		color: black;
+	}
 }
