began implementing pagination with ajax

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -90,6 +90,20 @@
 		margin-bottom: 80px;
 	}
 
+	.user-count {
+		text-align: center;
+		margin: 10px;
+		font-family: 'VT323', ;
+		font-size: 16px;
+	}
+
+	.paginate {
+		text-align: center;
+		margin: 10px;
+		font-family: 'VT323', ;
+		font-size: 16px;
+	}
+
 
 	.post-button {
 		text-align: center;
