added ability to edit profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,8 @@
 
 
 		<%= link_to "Go Back", users_path %>
+		<br>
+		<%= link_to "Edit Profile", edit_user_path %>
 	</div>
 
 	<h3>All of the posts are listed here...if you care</h3>
