--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -255,6 +255,73 @@
 
 }
 
+#edit-container {
+	.edit h1{
+		text-align: center;
+		font-family: 'VT323', ;
+		font-size: 50px;
+		margin-bottom: 80px;
+	}
+
+	.edit {
+		text-align: left;
+		border: 3px solid black;
+		border-radius: 10px;
+		padding: 40px;
+		padding-bottom: 80px;
+		margin: 100px;
+		margin-top: 20px;
+		margin-right: 250px;
+		margin-left: 250px;
+		background-image: url(http://www.clipartbest.com/cliparts/RTG/y9g/RTGy9gyrc.png);
+		background-size: 320px;
+		background-position: right center;
+		background-repeat: no-repeat;
+		/*background-attachment: fixed;*/
+		background-color: black;
+		height: 30%;
+		color: white;
+	}
+
+	.edit label {
+		font-family: 'VT323', ;
+		margin: 15px;
+		font-size: 25px;
+	}
+
+	.edit input {
+		font-family: 'VT323', ;
+		margin: 15px;
+		border-radius: 5px;
+	}
+
+	.edit button {
+		padding: 10px;
+		margin: 0px;
+		font-family: 'VT323', ;
+		border-radius: 20px;
+		border: 3px solid black;
+		margin-top: 50px;
+		color: white;
+		background-color: white;
+	}
+
+	.edit button input {
+		border: none;
+		background-color: white;
+		color: black;
+		font-size: 20px;
+		font-family: 'VT323', ;
+		border-radius: 10px;
+	}
+
+	.edit button a {
+		text-decoration: none;
+		color: black;
+		font-size: 20px;
+	}
+}
+
 
 
 
