--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,10 @@
 		<%= link_to "Edit Profile", edit_user_path %>
 	</div>
 
+	<div class="delete">
+		<%= link_to "Delete Profile", user_path, method: :delete, data: {confirm: "Are you sure you wish to delete your profile?"} %>
+	</div>
+
 	<h3>All of the posts are listed here...if you care</h3>
 
 	<div class="full-post">
