made adjustment to root view, testing figaro/aws #3

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -33,7 +33,7 @@
 
 
 	<div class="footer">
-		HIPSTER//\\GRAM - 2015
+		HIPSTER//\\GRAM - 2015 - Dowling Development
 	</div>
 
 </div> <!-- end home-container -->
