--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
 	</div>
 
 	<div class="header">
-		<h1>Welcome to where the magic happens</h1>
+		<h1>Welcome to Where the Magic Happens</h1>
 	</div>
 
 	<div class="post-button">
