--- a/app/views/users/index.js.erb
+++ b/app/views/users/index.js.erb
@@ -1,1 +1,1 @@
-$("#full-post").html("<%= escape_javascript(render "users") %>");
+// $("#full-post").html("<%= escape_javascript(render "users") %>");
