--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -116,7 +116,7 @@
 		/*margin-right: 1120px;
 		margin-left: 10px;*/
 		margin: 0 auto;
-		background-image: url(https://www.inretail.nl/websites/inretail/gfx/topmusmon1.jpg);
+		background-image: url(http://www.inretail.nl/websites/inretail/gfx/topmusmon1.jpg);
 		background-size: 280px;
 		background-position: right center;
 		background-repeat: repeat-x;
