--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -6,7 +6,9 @@
 	background-repeat: no-repeat;
 	/*background-attachment: fixed;*/
 	background-color: 0,0,0,0.6;
-	height: 100%;
+	min-height: 100vh;
+	width: 100%;
+	margin: 0 auto;
 
 	 
 	.header {
@@ -27,13 +29,13 @@
 	.signup a {
 		color: black;
 		float: left;
-		margin-left: 350px;
+		margin-left: 25%;
 		margin-bottom: 760px;
 	}
 
 	.login a {
 		color: black;
-		margin-right: 165px;
+		margin-right: 10%;
 
 	}
 
