--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,26 +1,20 @@
 #home-container {
-	
-	background-image: url(http://images.clipartpanda.com/hipster-glasses-drawing-moustache1.gif);
-	background-size: cover;
-	background-position: center center;
-	background-repeat: no-repeat;
-	/*background-attachment: fixed;*/
+	width: 85%;
+	margin: 0 auto;
 	background-color: 0,0,0,0.6;
 	min-height: 100vh;
-	width: 100%;
-	margin: 0 auto;
+
 
 	 
 	.header {
 		text-align: center;
 		font-family: 'VT323', ;
-		font-size: 50px;
-		margin-bottom: 80px;
+		font-size: 30px;
+		margin-bottom: 40px;
 	}
 
 	.homeNav {
 		text-align: center;
-		margin-bottom: 10px;
 		color: white;
 		font-size: 25px;
 		font-family: 'VT323', ;
@@ -28,15 +22,19 @@
 
 	.signup a {
 		color: black;
-		float: left;
-		margin-left: 25%;
-		margin-bottom: 760px;
 	}
 
 	.login a {
 		color: black;
-		margin-right: 10%;
+	}
 
+	.image img{
+		display: block;
+		text-align: center;
+
+		margin: 0 auto;
+		width: 80%;
+		height: 50%;
 	}
 
 	.footer {
