--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,7 @@
 <div id="home-container">
 
 <div class="header">
-	<h1>WELCOME TO HIPSTER//\\GRAM</h1>
+	<h1>WELCOME TO HIPSTER-GRAM</h1>
 </div>
 	
 
@@ -12,6 +12,10 @@
 		<div class="login">
 			<%= link_to '<<<<< Log In >>>>>', login_path %>
 		</div>
+	</div>
+
+	<div class="image">
+		<%= image_tag "hipster-glasses-drawing-moustache1.gif" %>
 	</div>
 
 	
