--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -31,10 +31,9 @@
 	.image img{
 		display: block;
 		text-align: center;
-
 		margin: 0 auto;
 		width: 80%;
-		height: 50%;
+		height: 400px;
 	}
 
 	.footer {
