--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,7 +6,13 @@
 		margin-bottom: 80px;
 	}
 
+	
+
 	.new {
+		background-image: url(http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=75924863);
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
 		text-align: center;
 		border: 3px solid black;
 		border-radius: 10px;
@@ -16,14 +22,12 @@
 		margin-top: 20px;
 		margin-right: 150px;
 		margin-left: 150px;
-		background-image: url(http://www.clipartbest.com/cliparts/xcg/L7G/xcgL7GacA.png);
-		background-size: 850px;
-		background-position: center center;
-		background-repeat: no-repeat;
-		/*background-attachment: fixed;*/
-		background-color: white;
 		height: 30%;
 		color: white;
+	}
+
+	.new h3 {
+		color: black;
 	}
 
 	.new p {
@@ -53,5 +57,6 @@
 		background-color: white;
 		padding: 10px;
 		color: black;
+		border-radius: 10px;
 	}
 }
